# outposts

./: .cursorignore  .cursorrules  .dockerignore  .env.example  .gitignore  .oxfmtrc.jsonc  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  biome.json  biome.jsonc  docker-compose.cd.yaml  docker-compose.deploy-override.yml  docker-compose.dev-deps.yml  docker-compose.web.yml  docker-compose.yaml  docker-compose.yml  eslint.config.cjs  eslint.config.mjs  justfile  mise.toml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  transloco.config.js  tsconfig.base.json  tsconfig.json  zellij-dev.kdl
.github/workflows/: cd.yaml  ci.yaml
apps/confluence/: Cargo.toml  Dockerfile.dev  Dockerfile.runtime  Dockerfile.runtime.dockerignore
apps/confluence/src/: config.rs  dto.rs  lib.rs  profile_script.rs  services.rs  traffic_reset.rs
apps/confluence/src/auth/: config_projection.rs  mod.rs  tests.rs
apps/confluence/src/clash/: http.rs  mod.rs  utils.rs
apps/confluence/src/error/: mod.rs
apps/confluence/src/migrations/: defs.rs  m20260409_000001_subscribe_source_nameserver_policy.rs  m20260428_000001_profile_transform_script.rs  m20260429_000001_profile_transform_script_transpiled.rs  m20260430_000002_subscribe_source_traffic_reset_policy.rs  m20260430_000003_subscribe_source_traffic_next_reset_at.rs  mod.rs
apps/confluence/src/models/: confluence.rs  profile.rs  subscribe_source.rs
apps/confluence/src/mux/: mod.rs
apps/confluence/src/tasks/: confluence_cron.rs  mod.rs
apps/confluence/src/tests/: tmpl-regex.yaml
apps/dev-proxy/: package.json
apps/dev-proxy/.whistle/properties/: properties
apps/dev-proxy/.whistle/rules/: properties
apps/dev-proxy/.whistle/rules/files/: 0.outposts-web  2.confluence
apps/outposts-web/: Dockerfile  Dockerfile.dev  Dockerfile.runtime  Dockerfile.runtime.dockerignore  eslint.config.cjs  nginx.conf  package.json  project.json  project.ssr.json  tailwind.config.js  tsconfig.app.json  tsconfig.editor.json  tsconfig.json  tsconfig.scripts.json  tsconfig.spec.json  vite.config.mts  vitest.config.ts
apps/outposts-web-host/: Dockerfile  Dockerfile.dev  Dockerfile.runtime  Dockerfile.runtime.dockerignore  inject.ts  package.json  tsconfig.json
apps/outposts-web/plugins/: dev-inject-middleware.ts  env-var-plugin.ts
apps/outposts-web/src/: index.html  main.server.ts  main.ts  server.ts  styles.scss  tailwind.css  test-setup.ts
apps/outposts-web/src/app/: app-theme.ts  app.component.spec.ts  app.component.ts  app.config.ts  app.module.ts  app.routes.ts  transloco-config.ts  transloco-loader.ts  transloco-root.module.ts
apps/outposts-web/src/assets/data/: icons.json  menu.json  news.json  versions.json
apps/outposts-web/src/assets/i18n/: en.json  zh_CN.json
apps/outposts-web/src/assets/styles/layout/: _config.scss  layout.css
apps/outposts-web/src/components/layout/: app.main.component.html  app.main.component.ts
apps/outposts-web/src/components/layout/footer/: app.footer.component.html  app.footer.component.ts
apps/outposts-web/src/components/spinner/: spinner.component.html  spinner.component.scss  spinner.component.ts
apps/outposts-web/src/core/defs/: app-state.ts  delay.ts
apps/outposts-web/src/core/providers/: window.provider.spec.ts  window.testing.ts  window.ts
apps/outposts-web/src/core/servces/: app-asset.service.ts  app-config.service.ts  app-i18n.service.ts  app-overlay.service.ts  platform.service.ts
apps/outposts-web/src/core/types/: global.d.ts  import-assets.d.ts  lib.d.ts
apps/outposts-web/src/domain/auth/: auth-callback.component.ts  auth-config-projection.spec.ts  auth-config-projection.ts  auth-oidc-events.spec.ts  auth-oidc-events.ts  auth-routing.module.ts  auth.bearer-interceptor.spec.ts  auth.defs.spec.ts  auth.defs.ts  auth.driver.ts  auth.event-diagnostics.spec.ts  auth.event-diagnostics.ts  auth.interceptor.ts  auth.module.ts  auth.providers.ts  auth.routes.spec.ts  auth.service.spec.ts  auth.service.ts  auth.utils.ts  oidc-auth.config.spec.ts  oidc-auth.config.ts  oidc-auth.driver.spec.ts  oidc-auth.driver.ts  provide-oidc-auth.spec.ts  provide-oidc-auth.ts
apps/outposts-web/src/domain/confluence/: confluence-can-active.guard.ts  confluence-rounting.module.ts  confluence.defs.spec.ts  confluence.defs.ts  confluence.module.ts  confluence.service.ts
apps/outposts-web/src/environments/: environment.development.ts  environment.ts
apps/outposts-web/src/pages/landing/: footersection.component.html  footersection.component.ts  herosection.component.html  herosection.component.ts  landing.component.html  landing.component.ts
apps/outposts-web/src/pages/notfound/: index.component.html  index.ts  routes.ts
apps/outposts-web/src/tools/: animation.utils.ts  type-assert.ts
apps/outposts-web/src/tools/clipboard/: clipboard.module.ts  clipboard.service.ts
apps/outposts-web/src/tools/doc/: _index.scss  doc.module.ts
apps/outposts-web/src/tools/qrcode/: qrcode.module.ts  qrcode.service.ts
apps/outposts-web/src/tools/rx/: decorators.ts  index.ts  operators.ts
docs/en/: 000-OVERVIEW.md  001-ARCHITECTURE.md  002-FEATURES.md  003-AUTH.md  100-ROADMAP.md
docs/zh/: 000-OVERVIEW.md  001-ARCHITECTURE.md  002-FEATURES.md  003-AUTH.md  100-ROADMAP.md
nginx/conf.d/: apps.conf  auth-dashboard.conf  auth.conf  confluence.conf  https.conf.example
postgres/: init.sh  upgrade.sh
(+41 files in other folders)
