cargo-features = ["profile-rustflags"]

[workspace]
members = ["apps/confluence"]
resolver = "3"

[workspace.dependencies]
securitydept-core = { version = "=0.2.0-beta.3" }

# securitydept-oidc-client depends on the set_option fork of openidconnect.
# This patch aligns outposts with the securitydept workspace so that transitive
# deps via securitydept-token-set-context compile against the same crate version.

[profile.dev.package.openidconnect]
rustflags = ["-Zhint-mostly-unused"]

[profile.release.package.openidconnect]
rustflags = ["-Zhint-mostly-unused"]

[profile.dev.package.sea-orm]
rustflags = ["-Zhint-mostly-unused"]

[profile.release.package.sea-orm]
rustflags = ["-Zhint-mostly-unused"]

[profile.dev.package.tokio-cron-scheduler]
rustflags = ["-Zhint-mostly-unused"]

[profile.release.package.tokio-cron-scheduler]
rustflags = ["-Zhint-mostly-unused"]

[profile.dev.package.jsonwebtoken]
rustflags = ["-Zhint-mostly-unused"]

[profile.release.package.jsonwebtoken]
rustflags = ["-Zhint-mostly-unused"]
