cargo-features = ["profile-rustflags"]

[workspace]
members = ["apps/confluence"]
resolver = "3"

[workspace.dependencies]
securitydept-core = { version = "0.3.0-beta.2" }

[profile.dev.package.openidconnect]
rustflags = ["-Zhint-mostly-unused"]

[profile.release.package.openidconnect]
rustflags = ["-Zhint-mostly-unused"]

[profile.dev.package.sea-orm]
rustflags = ["-Zhint-mostly-unused"]

[profile.release.package.sea-orm]
rustflags = ["-Zhint-mostly-unused"]

[profile.dev.package.tokio-cron-scheduler]
rustflags = ["-Zhint-mostly-unused"]

[profile.release.package.tokio-cron-scheduler]
rustflags = ["-Zhint-mostly-unused"]

[profile.dev.package.jsonwebtoken]
rustflags = ["-Zhint-mostly-unused"]

[profile.release.package.jsonwebtoken]
rustflags = ["-Zhint-mostly-unused"]

# [patch.crates-io]
# securitydept-core = { path = "../securitydept/packages/core" }
