[package]
name = "confluence"
version = "0.3.8"
edition = "2024"

[lib]
name = "confluence"
path = "src/lib.rs"

[[bin]]
name = "confluence_server"
path = "src/bin/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
uuid = { version = "1", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
addr = "0.15"
axum = "0.8"
axum-extra = "0.12"
boa_engine = "0.21"
chrono = { version = "0.4", features = ["serde"] }
openidconnect = { version = "4", features = ["reqwest"] }
dotenvy = "0.15"
futures = "0.3"
itertools = "0.14"
lazy_static = "1.5"
reqwest = { version = "0.13", features = ["json"] }
sea-orm = { version = "2.0.0-rc.37", features = [
  "debug-print",
  "mock",
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
sea-orm-migration = { version = "2.0.0-rc.37", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
random_name_generator = "0.3"
serde = { version = "1", features = ["derive"] }
serde-enum-str = "0.5"
serde_json = "1"
serde_yaml = "0.9.34-depcreated"
snafu = "0.9"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "net",
  "sync",
] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = "12"
cron = "0.16"
chrono-tz = "0.10"
tokio-cron-scheduler = "0.15"
monostate = "1"
log = "0.4"
fancy-regex = "0.18"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
securitydept-core = { workspace = true, features = [
  "oauth-resource-server",
  "creds",
  "token-set-context",
] }
swc_core = { version = "65", features = [
  "__parser",
  "common",
  "ecma_ast",
  "ecma_codegen",
  "ecma_parser_typescript",
  "ecma_transforms",
  "ecma_transforms_typescript",
  "ecma_visit",
] }

[dev-dependencies]
base64 = "0.22"
